Fix onemac-form flex direction and alignment

--- a/services/ui-src/src/index.scss
+++ b/services/ui-src/src/index.scss
@@ -590,6 +590,8 @@ input[type="file"] {
   @extend .app-bar;
   @extend .ds-u-padding-top--5;
   @extend .ds-u-justify-content--center;
+  flex-direction: column;
+  align-items: center;
 
   form {
     @include max-width-ultra-wide;
